packages/isar_plus/test/errors/index/invalid_name.dart
// names must not be blank or start with "_"

import 'package:isar_plus/isar_plus.dart';

@collection
class Model {
  late int id;

  @Index(name: '_index')
  String? str;
}
